corrigindo o text-decoration do java script

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button type="submit" id="botao-cadastrar" >Cadastrar</button>
         <div class="tarefaAdicionada">
             <ul>
-                <li><a id="link" href="#">lavar roupa</a></li>
+                <li><a id="link" href="#"></a></li>
             </ul>
         </div>
     </form>
